2015-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Fix argument check
	* man/xml-source/amfetchdump.8.xml: Fix spacing

2015-11-05  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amgtar.pl: Ignore SIGPIPE
	* installcheck/Installcheck/Application.pm: Do not fail on SIGPIPE if
	  allowed

2015-11-03  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm (_volume_cb): Release the old
	  reservation when changing scribe

2015-11-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm (set_dump_cb): New method
	* perl/Amanda/Taper/Worker.pm: return FAILED if
	  $self->{'xfer_source'}->get_addrs failed
	* server-src/driver.c: Accept a FAILED immediately after a PORT-WRITE

2015-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amlabel.pl: Add missign callback to failure()

2015-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ambsdtar.c (restore): Exit with 1 if BSDTAR-PATH
	  can't be executed
	* application-src/amgtar.c (amgtar_restore): Exit code of 1 is an
	  error
	* config/amanda/dumpers.m4 (AMANDA_PROG_BSDTAR): Fix BSDTAR default
	  value
	* installcheck/Installcheck/Application.pm (restore): Return the
	stderr of the application
	* installcheck/Makefile.am (client_tests): Add ambsdtar
	* installcheck/amgtar.pl: Add check
	* installcheck/ambsdtar.pl: New file to check ambsdtar behavior

2015-10-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (swap): __builtin_bswap32 is defined only for
	  GCC >= 4.3.0

2015-10-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (swap): Add missing function

2015-10-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (inventory_unlocked): Can returen all
	  slot (even those not in use-slot)
	* perl/Amanda/Recovery/Scan.pm (find_volume): Use only allowed slot

2015-10-19  Jean-Louis Martineau <martineau@zmanda.com>